<resources>
    <string name="empty"> </string>
    <string name="app_name">BAMX</string>
    <string name="title_activity_sobre_bamx2">sobre_BAMX2</string>
    <string name="sobrebamx">Sobre BAMX</string>
    <string name="voluntariado">Voluntariado</string>
    <string name="mis_donaciones">Mis donaciones</string>
    <string name="donar_especie">Donar especie</string>
    <string name="donar_dinero">Donar dinero</string>
    <string-array name="recurrencia">
        <item>Nunca</item>
        <item>Semanales</item>
        <item>Quincenales</item>
        <item>Mensuales</item>
        <item>Bimestrales</item>
        <item>Semestrales</item>
        <item>Anuales</item>
    </string-array>
    <string name="facebook_app_id">1168178077112759</string><string name="facebook_client_token">40230073432303bc3263a68d605aced0</string>
</resources>